# lotto

./: pyproject.toml
lotto/: cli.py
